src/test/deca/context/invalid/homemade/tests/test3/test312_nom_parametre_double.deca
// test invalide de la règle 3.12


class A {
    int calcul(int a, int a){
        int x = a + a;
        return x; 
    }
}